--- a/ord_plan.qmd
+++ b/ord_plan.qmd
@@ -90,8 +90,8 @@ r <- tbl |>
 
 <!-- communication through the opents project, code as communication channel --> 
 
-*In Work Package 1 (WP1), we lay the technical foundation for turning KOF Swiss Economic Institute's existing production process of macroeconomic time series into an open-source framework that creates publicly available, machine-readable, scientific-grade time series in a fully reproducible fashion. 
-Our approach uses open-source software licenses that are free of license costs and aims to publish not only the resulting time series data but also the technical framework and infrastructure setup. Doing so ensures reproducibility and helps to comply with FAIR principles. Thanks to our infrastructure-as-code approach, we can publish information on an ideal runtime environment to help others operate their own instance of the *Open Time Series* framework.*
+*In Work Package 1 (WP1), we lay the technical foundation for turning KOF Swiss Economic Institute's (KOF) existing production process of macroeconomic time series into an open-source framework that creates publicly available, machine-readable, scientific-grade time series in a fully reproducible fashion. 
+Our approach uses open-source software licenses that are free of license costs and aims to publish not only the resulting time series data but also the technical framework and infrastructure setup. Doing so ensures reproducibility and helps to comply with FAIR principles. Thanks to our infrastructure-as-code approach, we can publish information on an ideal runtime environment to help others operate their own instance of the Open Time Series framework.*
 
 Because an active community is inevitable to keep the project sustainable, i.e., well maintained, we chose the R Project for Statistical Computing as our main programming language for the implementation of the framework. R is known for its large and inclusive community with its annual user conferences [@inclusivecon] and vibrant local communities^[@rsebook discusses the importance of communities for the learner, including experience from hosting the useR! Conference 2021 which KOF co-chaired in a dedicated community chapter.] . Alongside its strong regional and international community, the fact that R is open source and free of license costs lowers the barrier to entrance and contribution considerably. In addition, R offers well-established boiler plating ecosystems like *usethis* [@usethis] and documentation frameworks such as *pkgdown* [@pkgdown] or Roxygen [@roxygen2]. 
 
@@ -158,7 +158,7 @@ r <- tbl |>
 :::
 
 
-*The goal of Work Package 2 (WP2) is to find the platforms that suit our community, data and code components best and facilitate our approach to ORD. We will involve our data consumers and collaborators into this decision-making process. Based on our *open by default* thinking, we will publish not only the resulting time series data and meta information, but all components of our software framework. In the process, we will work together with the ETH legal service to find the most suitable open source licensing solution^[see https://choosealicense.com/] for all components of the opents project.*
+*The goal of Work Package 2 (WP2) is to find the platforms that suit our community, data and code components best and facilitate our approach to ORD. We will involve our data consumers and collaborators into this decision-making process. Based on our open by default thinking, we will publish not only the resulting time series data and meta information, but all components of our software framework. In the process, we will work together with the ETH legal service to find the most suitable open source licensing solution^[see https://choosealicense.com/] for all components of the opents project.*
 
 The *Open Time Series* project's approach, suggested here, splits data and meta information into two separate text files and formats: a simple CSV spreadsheet and a nested JSON file for multilingual data description. Having two simple text files per dataset allows us to disseminate the resulting time series data on free, standard infrastructure such as GitHub, which is well established in the open-source community. The state-of-the-art rendering of CSV spreadsheets on modern git platforms sets the barrier to exploring and consuming our scientific use time series datasets as low as possible. Hence, the publication of data on GitHub, possibly using git's Large File Storage (LFS) extension, forms our baseline scenario. Yet, in WP2, we explore the feasibility of other, complementary, regional and international publication channels such as opendata.swiss^[https://opendata.swiss], r-universe or Zenodo.
 
@@ -208,11 +208,11 @@ r <- tbl |>
 
 *The goal of work package 3 (WP3) is to promote usage of the framework and data as well as to encourage others to contribute. 
 In particular we are looking for community contributions such as maintenance of existing datasets, addition of public datasets that have not yet been processed and community activities. 
-At this stage, we will also intensify activities to explore the expansion of **Open Time Series** into different academic fields.*
+At this stage, we will also intensify activities to explore the expansion of Open Time Series into different academic fields.*
 
 We plan to approach the above goals in three ways: i) integration of *Open Time Series* data and software into academic teaching aimed at scientists from different disciplines. ii) presentation of *Open Time Series* at useR! 2024 in Salzburg, Austria^[useR! is the annual conference of R users. useR! conference usually draw more than 1'000 international users from a large variety of fields. See also https://events.linuxfoundation.org/user/]. iii) participation in local community events iv) hosting of an own event at KOF. 
 
-Starting in fall 2024, *Open Time Series* data and software will be integrated into the Hacking for Science course^[See also: https://ethz.ch/en/the-eth-zurich/education/innovation/kite-award/kite-award-2022/nominierte-projekte-kite-award-2022/hacking-for-social-sciences.html]. 
+Starting in fall 2024, *Open Time Series* data and software will be integrated into the Hacking for Science course^[See also: the course announcement blog post: https://rseed.ch/posts/h4sci/ and course Kite award nomination: https://ethz.ch/en/the-eth-zurich/education/innovation/kite-award/kite-award-2022/nominierte-projekte-kite-award-2022/hacking-for-social-sciences.html]. 
 Originally created for ETHZ D-MTEC PhD students, Hacking for Science is a highly interactive online course whose big picture guidance and hands-on software development approach continues to draw interest from students from a variety of fields. 
 The course last iteration welcomed students from more than 10 different ETH departments as well as guests from outside ETH.
 We aim to communicate the value of open data to this broad audience and learn which challenges ORD faces in different fields. 
