--- a/overview.qmd
+++ b/overview.qmd
@@ -1,8 +1,8 @@
 # Schedule Overview
 
-The following Gantt Chart shows shows the four work packages (WP0: Coordination and Planning, WP1: Make Data Processing Framework Inclusive, WP2: Publication and WP3: Facilitate Usage and Applications) and the timeframe in which their activities will be carried out. See Sections 2.1 - 2.4 above for details on the goals and implementation of the WPs. The chart also includes the project activities gives an overview which activity is lead by which collaborators, where PI = Principal Investigator, RSE = Research Software Engineer, and SA = Scientific Assisstant, PA = Programming Assistant, ZD = Developer of KOF General IT ('Zentrale Dienste').
+The following Gantt chart shows the four work packages (WP0: Coordination and Planning, WP1: Make Data Processing Framework Inclusive, WP2: Publication and WP3: Facilitate Usage and Applications) and the timeframe in which activities will be carried out. See Sections 2.1 - 2.4 above for details on the goals and implementation of the WPs. The chart also includes the project activities and giving an overview of which activities are lead by which collaborator, where PI = Principal Investigator, RSE = Research Software Engineer, and SA = Scientific Assisstant, PA = Programming Assistant, ZD = KOF Swiss Economic Institute (KOF) IT specialist ('Zentrale Dienste').
 
-![Gantt Chart](gantt_chart.png)
+![Schedule overview](gantt_chart.png)
 
 <!-- 
 ```{=html}
