--- a/index.qmd
+++ b/index.qmd
@@ -2,11 +2,11 @@
 
 Because publications of public data providers focus on a broader audience, their datasets are often not convenient to use for academic research. 
 As a result, data sourcing processes are implemented redundantly across research projects and institutions, often in an only partly automated, possibly error-prone way. 
-The *Open Time Series* project addresses this problem by homegenizing, documenting and open-sourcing KOF's well-tested data sourcing processes of public data as well as the resulting scientific use grade, machine-readable time series datasets. 
-This publication of thousands of machine-readable macroeconomic time series and their metadata has an immediate impact on the economic and real-time analysis research communities.
-In addition, our community approach, the exemplary character and inclusive manner of these reproducible data publications promises to have spillover effects to other communities in the longer run. 
-Our well-established network helps further to make our impact sustainable through the feedback we give to data providers such as the Federal Statistical Office (FSO), the Swiss National Bank (SNB), the Secretariat of Economic Affairs (SECO) and cantonal statistical offices. 
-Finally, the inclusion of the *Open Time Series* framework and datasets into teaching pushes ORD excellence by ensuring that the next generation of public servants is familiar with ORD principles and publicly available Swiss data.
+The *Open Time Series* project addresses this problem by homegenizing, documenting and publishing KOF's well-tested data sourcing processes for public data in an open source project.
+First, the publication of thousands of machine-readable time series and their metadata will reduce the data sourcing burden and improve data quality. Hence, our project will have an immediate positive impact on the time series analysis and economic research communities.
+Second, the community approach we employ, the exemplary character and the inclusive manner of our reproducible publications promise to have spillover effects to other research communities in the longer run. 
+The KOF Swiss Economic Institute's network leverages the impact of our project through our exchange with data providers such as the Federal Statistical Office (FSO), the Swiss National Bank (SNB), the Swiss Secretariat of Economic Affairs (SECO) and cantonal statistical offices. 
+Finally, the inclusion of the *Open Time Series* framework and datasets into teaching advances Open Research Data (ORD) excellence by ensuring that the next generation of public servants is familiar with ORD principles and publicly available Swiss data.
 
 
 
